Bug 351767, pk12util -o <out> -W crashes if <out> is directory r=nelson